added demo polar plots

--- a/Polar-plots.ipynb
+++ b/Polar-plots.ipynb
@@ -514,7 +514,10 @@
    ],
    "source": [
     "# here we create df3 to represent a subsection of the race.\n",
-    "\n",
+    "# the polar plot should be read as time extending from the origin (center of circle) \n",
+    "# with headings represented by angle\n",
+    "# every time the blue line crosses the red line, the boat gybed\n",
+    "# every time the blue line crosses the green line, the boat tacked\n",
     "start,end = 3000, 8000\n",
     "df3 = df2[start:end].copy()\n",
     "df3.index -= start\n",
